--- a/css/hover.css
+++ b/css/hover.css
@@ -3,7 +3,7 @@
   font-family: "Inter", "Arial", sans-serif;
   /* font-family: "Inter"; */
   font-size: 24px;
-  color: #474541;
+  color: #33312e;
 }
 
 /* Hover fade in/out speed */
