--- a/_layouts/beta.html
+++ b/_layouts/beta.html
@@ -16,6 +16,9 @@
       }
       {% endfor %}
     </style>
+    <style>
+  @import url("https://use.typekit.net/clz6ews.css");
+</style>
   </head>
   <body>
     <ol id="portfolio">
