--- a/css/hover.css
+++ b/css/hover.css
@@ -1,6 +1,6 @@
 /* Font styles for hover text */
 #portfolio li p {
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: "Questa-Grande", "Arial", sans-serif;
   /* font-family: "Inter"; */
   font-size: 24px;
   color: #33312e;
