--- a/_layouts/beta.html
+++ b/_layouts/beta.html
@@ -21,6 +21,13 @@
 </style>
   </head>
   <body>
+    <header>
+      <h1><img src="/images/logo.png" alt="{{ site.title }}"></h1>
+      <ol id="nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/projects">Projects</a></li>
+      </ol>
+    </header>
     <ol id="portfolio">
       {% for item in page.portfolio %}
       <li class="{% cycle "first": "full-row", "", "" %} {{ item.color }}">
