--- a/css/beta.css
+++ b/css/beta.css
@@ -11,6 +11,7 @@ header {
   height: 150px;
   background: rgba(255, 255, 255, 0);
   overflow: hidden;
+  
 }
 
 header h1 {
@@ -19,6 +20,8 @@ header h1 {
   margin: 25px auto;
   border-radius: 100px;
   overflow: hidden;
+  font-family: 'Questa-Grande';
+  color: #633b3b;
 }
 
 header h1 img {
