--- a/css/beta.css
+++ b/css/beta.css
@@ -11,6 +11,8 @@ header {
   height: 150px;
   background: rgba(255, 255, 255, 0);
   overflow: hidden;
+    font-family: 'Questa-Grande';
+  color: #633b3b;
   
 }
 
