--- a/css/beta.css
+++ b/css/beta.css
@@ -11,7 +11,9 @@ header {
   height: 150px;
   background: rgba(255, 255, 255, 0);
   overflow: hidden;
-
+    font-family: 'Questa-Grande';
+  color: #633b3b;
+  
 }
 
 header h1 {
@@ -32,6 +34,8 @@ header h1 img {
 header li a{
   display: inline-block;
   padding: 0 10px;
+  font-family: 'Questa-Grande';
+  color: #633b3b;
 }
 
 header #nav {
@@ -39,4 +43,8 @@ header #nav {
   top: 0;
   right: 0;
   padding: 50px;
+}
+
+.boxed {
+  background-color:#33312e;
 }
