--- a/css/beta.css
+++ b/css/beta.css
@@ -46,7 +46,7 @@ header #nav {
 }
 
 .boxed {
-  background: #33312e;
+  background: #ede8d8;
   padding: 15px;
   color: #33312e;
   foreground: #33312e;
