--- a/css/beta.css
+++ b/css/beta.css
@@ -48,7 +48,7 @@ header #nav {
 .boxed {
   background: #ede8d8;
   padding: 15px;
-  color: #4a3841;
+  color: rgb(235, 232, 225);
   foreground: #33312e;
   border-radius: 25px;
   text-decoration: none;
