--- a/css/beta.css
+++ b/css/beta.css
@@ -46,7 +46,7 @@ header #nav {
 }
 
 .boxed {
-  background: #ede8d8;
+  background: #3b272d;
   padding: 15px;
   color: rgb(235, 232, 225);
   foreground: #33312e;
