--- a/css/beta.css
+++ b/css/beta.css
@@ -13,6 +13,8 @@ header {
   overflow: hidden;
     font-family: 'Questa-Grande';
   color: #633b3b;
+  padding-left: 16px;
+  padding-right: 16px;
   
 }
 
