--- a/_layouts/beta.html
+++ b/_layouts/beta.html
@@ -21,11 +21,11 @@
 </style>
   </head>
   <body>
-    <header class="nav">
+    <header>
       <h1><img src="/images/logo.png" alt="{{ site.title }}"></h1>
       <ol id="nav">
-        <p><a href="/">Home</a></li>
-        <p><a href="/projects">Projects</a></li>
+        <p><a href="/" class="nav-links">Home</a></li>
+        <p><a href="/projects" class="nav-links">Projects</a></li>
       </ol>
     </header>
     <ol id="portfolio">
