--- a/_layouts/beta.html
+++ b/_layouts/beta.html
@@ -24,8 +24,8 @@
     <header>
       <h1><img src="/images/logo.png" alt="{{ site.title }}"></h1>
       <ol id="nav">
-        <p><a href="/" class="nav-links">Home</a></li>
-        <p><a href="/projects" class="nav-links">Projects</a></li>
+        <p><a href="/" class="boxed">Home</a></li>
+        <p><a href="/projects" class="boxed">Projects</a></li>
       </ol>
     </header>
     <ol id="portfolio">
