--- a/css/beta.css
+++ b/css/beta.css
@@ -50,7 +50,7 @@ header #nav {
   padding: 50px;
 }
 
-.nav-links {
+.boxed {
   background: #643447;
   padding: 15px;
   color: rgb(235, 232, 225);
